# MyBlog

./: .gitignore  pyproject.toml
blog/: config.py  database.py  main.py
src/: config.py  database.py  main.py  models.py
static/: index.css
templates/: index.html
