[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["volkan <tdima7644@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
fastapi = "^0.111.0"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
venvPath = "/home/volkan/.cache/pypoetry/virtualenvs/"
venv = "blog-aZh4u_5A-py3.12"
